# grip

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: compiler.cmake  functions.cmake
dependencies/: CMakeLists.txt  README.md
include/: common.hpp  grip.hpp  utility.hpp
include/common/: api.hpp  compiler.hpp  inline.hpp  platform.hpp  unused.hpp
include/common/compiler/: clang.hpp  cygwin.hpp  gcc.hpp  msvc.hpp
include/common/platform/: android.hpp  ios.hpp  linux.hpp  osx.hpp  windows.hpp
include/utility/: fiber.hpp
scripts/: build-vs2015.bat  build-vs2017.bat
src/: grip.cpp  main_linux.cpp  main_osx.mm  main_win.cpp
